--- a/scss/style.scss
+++ b/scss/style.scss
@@ -56,6 +56,10 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
+.menu {
+  display: none;
+}
+
 #banner {
   background: url(../images/deadpool.jpg);
   background-repeat: no-repeat;
@@ -241,6 +245,113 @@ h1, h2, h3, h4, h5, h6 {
       margin: 0 .5em;
       &:hover {
         color: $highlight;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  #main_nav {
+    display: none;
+  }
+  #main_nav.active {
+    display: block;
+    width: 100%;
+    a {
+      display: block;
+      padding: 1em 0;
+      border-bottom: 1px solid #E9E9E9;
+      &:last-child {
+        border-bottom: none;
+      }
+    }
+  }
+  .menu {
+    display: block;
+    float: right;
+    i {
+      font-size: 1.5em;
+      color: $main;
+      padding-top: .6em;
+    }
+  }
+  #banner {
+    padding: 3.5em 0;
+    .poster {
+      width: 250px;
+      .play_button{
+        width: 60px;
+        margin: -30px 0 0 -30px;
+      }
+    }
+    .content {
+      margin-left: 50px;
+      .title { 
+        font-size: 1.5em;
+      }
+      .rattings {
+        display: inline;
+        margin-left: 1em;
+        i {
+          font-size: 1em;
+        }
+      }
+      .description {
+        font-size: .9em;
+      }
+      .info {
+        font-size: .7em;
+        margin-top: 2em;
+        span {
+          margin: 0 .25em;
+        }
+      }
+    }
+  }
+
+  #top_movies, #top_shows {
+    padding: 3em 0;
+    header {
+      padding: 0 0 1.5em 1.25%;
+      h2 {
+        font-size: 1.5em;
+      }
+      .view_more {
+        margin: .75em 2.25% 0;
+      }
+    }
+  }
+  
+  .row {
+    .post {
+      width: 30.6%;
+      margin: 0 1.25% 2em 1.25%;
+      .title {
+        font-size: 1em;
+        margin: .5em 0 0 0;
+      }
+      .post_info {
+        font-size: .65em;
+      }
+    }
+  }
+  
+}
+
+@media only screen and (max-width: 480px) {
+  
+  #banner {
+    #banner_content_wrapper {
+      display: block;
+      #poster {
+        width: 250px;
+        float: none;
+        display: block;
+        margin: 0 auto;
+      }
+      #content {
+        width: 100%;
+        margin: 1em auto 0 auto;
       }
     }
   }
