--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,9 +1,9 @@
-$main: #252529;
+$main:      #252529;
 $secondary: #8b8b9f;
-$highlight:  #73e298;
-$white: #ffffff;
+$highlight: #73e298;
+$white:     #ffffff;
 
-*{
+* {
   box-sizing: border-box;
 }
 
@@ -11,12 +11,12 @@ html, body {
   font-family: 'Open-Sans', sans-serif;
 }
 
-.clearfix:before, .clearfix:after{
+.clearfix::before, .clearfix::after {
   content: " ";
   display: table;
 }
 
-.clearfix:after{
+.clearfix::after {
   clear: both;
 }
 
@@ -31,23 +31,26 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 // header
-#top_header{
+#top_header {
   padding: 1.5em 0;
+
   .logo {
     float: left;
     text-transform: uppercase;
     font-size: 1.15em; 
     font-weight: 700;
-    span{
+
+    span {
       font-weight: 300;
       color: $highlight;
     }
   }
 
-  #main_nav{
+  #main_nav {
     float: right;
     font-size: .9em;
     padding-top: 1em; 
+
     a {
       color: $secondary;
       text-decoration: none;
@@ -66,6 +69,7 @@ h1, h2, h3, h4, h5, h6 {
   background-size: cover;
   width: 100%;
   padding: 6.5em 0;
+
   #banner_content_wrapper {
     width: 900px;
     max-width: 90%;
@@ -74,11 +78,13 @@ h1, h2, h3, h4, h5, h6 {
     justify-content: center;
     align-items: center;
   }
+
   .poster {
     width: 275px;
     position: relative;
     float: left;
-    .featured_image{
+
+    .featured_image {
       width: 100%;
       max-width: 100%;
       border-radius: .5em;
@@ -86,7 +92,8 @@ h1, h2, h3, h4, h5, h6 {
       -moz-box-shadow: 0px 0px 76px 0px rgba(0 , 0 , 0, 0.47);
       box-shadow: 0px 0px 76px 0px rgba(0 , 0 , 0, 0.47);
     }
-    .play_button{
+
+    .play_button {
       position: absolute;
       width: 80px;
       left: 50%;
@@ -94,37 +101,45 @@ h1, h2, h3, h4, h5, h6 {
       margin: -40px 0 0 -40px;
     }
   }
+
   .content {
     float: left;
     width: 500px;
     margin-left: 100px;
+
     .title { 
       display: inline;
       font-size: 1.75em;
       color: $white;
     }
+
     .rattings {
       display: inline;
       margin-left: 1em;
+
       i {
         color: $highlight;
         font-size: 1.35em;
         margin: 0 .15em;
       }
-      .inactive{
+
+      .inactive {
         color: #48494d;
       }
     }
+
     .description {
       color: #bbbebf;
       font-size: 1em;
       line-height: 2;
     }
+
     .info {
       color: $white;
       font-size: .8em;
       font-weight: 700;
       margin-top: 3em;
+
       span {
         margin: 0 .5em;
       }
@@ -134,14 +149,18 @@ h1, h2, h3, h4, h5, h6 {
 
 #top_movies, #top_shows {
   padding: 5em 0;
+
   header {
     padding: 0 0 1.5em 0;
-    h2, .view_more{
+
+    h2, .view_more {
       display: inline;
     }
+
     h2 {
       font-size: 1.75em;
     }
+
     .view_more {
       float: right;
       font-size: .8em;
@@ -157,20 +176,24 @@ h1, h2, h3, h4, h5, h6 {
 
 .row {
   width: 100%;
+
   .post {
     width: 14%;
     float: left;
     margin-right: 2.5%;
+
     img {
       width: 100%;
       max-width: 100%;
       border-radius: .5em;
     }
+
     .title {
       font-size: 1.25em;
       margin: 1em 0 0 0;
       color: $main;
     }
+
     .post_info {
       font-size: .75em;
       color: $secondary;
@@ -183,18 +206,22 @@ h1, h2, h3, h4, h5, h6 {
   padding: 5em 0;
   text-align: center;
   background: #2a2a2e;
+
   .newsletter_inner {
     width: 600px;
     max-width: 90%;
     margin: 0 auto;
   }
+
   h2 {
     font-size: 1.75em;
     color: $white;
   }
+
   .sign_up_form {
     margin-top: 3em;
-    input[type="text"], input[type="email"]{
+
+    input[type="text"], input[type="email"] {
       width: 48%;
       margin: 0 .5%;
       height: 3.25em;
@@ -206,6 +233,7 @@ h1, h2, h3, h4, h5, h6 {
       font-size: .8em;
       color: $white;
     }
+
     .button {
        border: none;
        outline: none;
@@ -223,27 +251,33 @@ h1, h2, h3, h4, h5, h6 {
 #main_footer {
   padding: 2.5em 0;
   text-align: center;
+
   .logo {
     text-transform: uppercase;
     font-size: 1.15em;
     font-weight: 700;
+
     span {
       font-weight: 300;
       color: $highlight;
     }
   }
-  .copiright {
+
+  .copyright {
     color: $secondary;
-    font-size: 0.75em;
+    font-size: .75em;
     margin: 0;
   }
+
   .links {
     display: inline;
+
     a {
       color: $secondary;
       font-size: .75em;
       text-decoration: none;
       margin: 0 .5em;
+
       &:hover {
         color: $highlight;
       }
@@ -252,57 +286,73 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 @media only screen and (max-width: 768px) {
+
   #main_nav {
     display: none;
   }
+
   #main_nav.active {
     display: block;
     width: 100%;
+
     a {
       display: block;
       padding: 1em 0;
       border-bottom: 1px solid #E9E9E9;
+      
       &:last-child {
         border-bottom: none;
       }
     }
   }
+
   .menu {
     display: block;
     float: right;
+
     i {
       font-size: 1.5em;
       color: $main;
       padding-top: .6em;
     }
   }
+
   #banner {
     padding: 3.5em 0;
+
     .poster {
       width: 250px;
-      .play_button{
+
+      .play_button {
         width: 60px;
         margin: -30px 0 0 -30px;
       }
     }
+
     .content {
       margin-left: 50px;
+
       .title { 
         font-size: 1.5em;
       }
+
       .rattings {
         display: inline;
         margin-left: 1em;
+
         i {
           font-size: 1em;
         }
       }
+
       .description {
         font-size: .9em;
       }
+
       .info {
         font-size: .7em;
         margin-top: 2em;
+
         span {
           margin: 0 .25em;
         }
@@ -312,11 +362,14 @@ h1, h2, h3, h4, h5, h6 {
 
   #top_movies, #top_shows {
     padding: 3em 0;
+
     header {
       padding: 0 0 1.5em 1.25%;
+
       h2 {
         font-size: 1.5em;
       }
+
       .view_more {
         margin: .75em 2.25% 0;
       }
@@ -326,11 +379,14 @@ h1, h2, h3, h4, h5, h6 {
   .row {
     .post {
       width: 30.6%;
+      height: 350px;
       margin: 0 1.25% 2em 1.25%;
+
       .title {
         font-size: 1em;
         margin: .5em 0 0 0;
       }
+
       .post_info {
         font-size: .65em;
       }
@@ -344,12 +400,14 @@ h1, h2, h3, h4, h5, h6 {
   #banner {
     #banner_content_wrapper {
       display: block;
+
       .poster {
         width: 250px;
         float: none;
         display: block;
         margin: 0 auto;
       }
+
       .content {
         width: 100%;
         margin: 1em auto 0 auto;
@@ -371,18 +429,22 @@ h1, h2, h3, h4, h5, h6 {
     }
   }
 
-  #newsletter{
+  #newsletter {
     padding: 3em 0;
+
     h2 {
       font-size: 1.35em;      
     }
-    .sign_up_form{
+
+    .sign_up_form {
       margin-top: 2em;
-      input[type="text"], input[type="email"]{
+
+      input[type="text"], input[type="email"] {
         width: 90%;
         margin: 0 0 1em 0;
       }
-      .button{
+
+      .button {
         margin-top: 2em;
       }
     }
